fix cursor on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,12 @@ html {
   scrollbar-width: auto;
 }
 
+@media only screen and (max-width: 700px) {
+  body .cursor {
+    display: "none";
+  }
+}
+
 .custom-dot-list-style {
   position: absolute;
   bottom: 0;
